--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "afunc",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "main": "index.js",
   "author": "Snazzah",
   "description": "Replicate methods and listen to actions in Discord.",
   "license": "MIT",
   "peerDependencies": { "elements": "*" },
   "keywords": ["di-plugin"],
+  "dependencies": {
+    "eventemitter3": "^3.1.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SnazzahDI/AFunc.git"
